public/css/style.css
:root {
    --menu-color: #fff !important;
    --sombra: 0px 13px 32px -17px rgba(0, 0, 0, 0.15);
    --section-menu-pad: 12px 12px;
    --size-menu-font: 10pt;
    --radius: 150px !important;
    --footer: #e6e9ec;
    --bar-progress-player: #ffffff;
    --bar-progress-player-background: #505050;
}

* {
    box-sizing: border-box;
}

*::-webkit-scrollbar {
    width: 5px !important;
}

*::-webkit-scrollbar-thumb {
    -webkit-border-radius: 10px !important;
    border-radius: 10px !important;
    background: #ffffff !important;
    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3) !important;
}

*::-webkit-scrollbar-track {
    -webkit-box-shadow: none;
    -webkit-border-radius: 10px;
    border-radius: 10px !important;
}

body {
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    background-color: #000000;
    overflow-y: hidden;
}

p,
h1,
h2 {
    color: #ffffff;
}

#background {
    width: 100%;
    height: 100%;
    background-image: url('../src/images/song.jpg');
    background-repeat: no-repeat;
    background-size: cover;
    filter: blur(25px) brightness(0.5);
    position: fixed;
    padding: 0;
    margin: 0;
    top: 0;
    left: 0;
}

#player-container {
    width: 100%;
    height: 100%;
    margin: auto;
    position: relative;
    text-align: center;
}

.player-card-container {
    width: 100%;
    height: calc(100% - 112px);
    position: fixed;
    padding: 0;
    margin: 0;
    top: 0;
    left: 0;
    overflow-x: hidden;
    overflow-y: scroll;
}

.player-card {
    text-align: center;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.player-card img {
    width: 368px;
    object-fit: cover;
    border-radius: 16px;
}

h1#autor {
    font-weight: 500;
    margin-bottom: 4px;
}

h2#song {
    font-weight: 400;
    margin-top: 0;
}

footer {
    position: fixed;
    left: 50%;
    transform: translateX(-50%);
    bottom: 32px;
    width: 90%;
}

.player-footer-controls {
    width: 100%;
    height: 100%;
    text-align: center;
    justify-content: center;
    display: flex;
    flex-direction: row;
    transform: translateY(25%);
}

.player-footer-controls div {
    margin: auto 32px auto 32px;
    filter: invert(0.9) !important;
}

.player-footer-controls #pause-control img {
    width: 32px;
    height: 32px;
}

.player-footer-controls #volume-control {
    display: flex;
    flex-direction: row;
    justify-self: end;
    filter: none;
}

.player-footer-controls #volume-control img {
    filter: invert(0.9);
}

.player-footer-controls #volume-control:hover {
    transform: none;
    filter: none;
}

.player-footer-controls div:hover {
    transform: scale(1.05);
    filter: invert(1);
}

.hidden {
    display: none;
}

#player-slider {
    display: flex;
    flex-direction: row;
    justify-content: center;
    margin: auto;
}

input#volume[type="range"] {
    margin: 4px 0px 6px 32px;
    width: 8%;
    position: absolute;
}

input[type="range"] {
    margin: 25.7px 12px 6px 12px;
    display: block;
    z-index: 999;
    -webkit-appearance: none;
    overflow: hidden;
    height: 6px;
    width: 100%;
    cursor: pointer;
    border-radius: 32px;
}

input[type="range"]:focus {
    border: none;
    outline: none;
}

input[type="range"]::-webkit-slider-runnable-track {
    background: var(--bar-progress-player-background);
}

input[type="range"]::-webkit-slider-thumb {
    -webkit-appearance: none;
    width: 2px;
    height: 40px;
    background: var(--bar-progress-player);
    box-shadow: -100vw 0 0 100vw var(--bar-progress-player);
    border-radius: 25px;
}

input[type="range"]::-moz-range-track {
    height: 40px;
    background: var(--bar-progress-player-background);
}

input[type="range"]::-moz-range-thumb {
    background: #fff;
    height: 40px;
    width: 20px;
    border: 3px solid #999;
    border-radius: 0 !important;
    box-shadow: -100vw 0 0 100vw var(--bar-progress-player);
    box-sizing: border-box;
}

input[type="range"]::-ms-fill-lower {
    background: var(--bar-progress-player);
}

input[type="range"]::-ms-thumb {
    background: #fff;
    border: 2px solid #999;
    height: 40px;
    width: 20px;
    box-sizing: border-box;
}

input[type="range"]::-ms-ticks-after {
    display: none;
}

input[type="range"]::-ms-ticks-before {
    display: none;
}

input[type="range"]::-ms-track {
    background: var(--bar-progress-player-background);
    color: transparent;
    height: 40px;
    border: none;
}

input[type="range"]::-ms-tooltip {
    display: none;
}

